# nuodb-drivers

./: README.md
dotnet/: .gitignore  README.md  global_assembly_info.cpp  nuodb.sln  nuodb35.sln
dotnet/nuodb/: NuoDbCommand.cpp  NuoDbCommand.h  NuoDbConnection.cpp  NuoDbConnection.h  NuoDbDataReader.cpp  NuoDbDataReader.h  NuoDbParameter.cpp  NuoDbParameter.h  NuoDbTransaction.cpp  NuoDbTransaction.h  assembly_info.cpp  command.cpp  connection.cpp  connection.h  datareader.cpp  datareader.h  error.cpp  error.h  nuodb.35.vcxproj  nuodb.vcxproj  nuodb35.vcxproj  parameter.h  stdafx.cpp  stdafx.h
jruby/: README.md
jruby/activerecord-jdbcnuodb-adapter/: activerecord-jdbcnuodb-adapter.gemspec
jruby/samples/: sample.rb
nodejs/: README.md  tests.js
nodejs/src/: connection.cc  result.cc  result.h
perl-DBD-NuoDB/: MANIFEST  Makefile.PL  NuoDB.xs  README.md  dbdimp.cpp  dbdimp.h
perl-DBD-NuoDB/lib/DBD/: NuoDB.pm
perl-DBD-NuoDB/t/: 03-autocommit.t  05-bind.t
perl_dbi/: MANIFEST  Makefile.PL  NuoDB.xs  README.md  dbdimp.cpp  dbdimp.h
perl_dbi/lib/DBD/: NuoDB.pm
perl_dbi/t/: 01-connect.t  02-prepare.t  04-quote.t  06-utf8.t  07-disconnect.t
php/: README.md  do_win32.bat  nuodb_php.cpp  php_nuodb.h
php_pdo/: README.md  do_linux64  do_win32.bat
php_pdo/pdo_nuodb/: .gitignore  CMakeLists.txt  README.md  nuodb_driver.c  nuodb_driver.cpp  nuodb_statement.c  nuodb_statement.cpp  pdo_nuodb.c  pdo_nuodb.cbp  pdo_nuodb.cpp  pdo_nuodb.layout  php_pdo_nuodb.h  php_pdo_nuodb_c_cpp_common.h  php_pdo_nuodb_cpp_int.cpp  php_pdo_nuodb_cpp_int.h  php_pdo_nuodb_int.h
php_pdo/pdo_nuodb/tests/: busy.php  complex.php  connect.phpt  prepared_statements.php  prepared_statements2.php  prepared_statements3.php  prepared_statements4.php  prepared_statements5.php  prepared_statements6.php  simple.php  simple2.php  testdb.inc
ruby/activerecord-nuodb-adapter/lib/: activerecord-nuodb-adapter.rb
